[lworld] TestLWorld crashes in ciInstanceKlass::get_field_by_offset() with -Xcomp

XMLWordPrintable

        26891 1119 !b compiler.valhalla.valuetypes.TestLWorld::test49_verifier (50 bytes)
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007f48836388ae, pid=7051, tid=7062
      #
      # JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-adhoc.tobias.open)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-adhoc.tobias.open, compiled mode, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x9898ae] ciInstanceKlass::get_field_by_offset(int, bool)+0x2e
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /oracle/valhallaL/open/JTwork/scratch/core.7051)
      #
      Unsupported internal testing APIs have been used.

      # An error report file with more information is saved as:
      # /oracle/valhallaL/open/JTwork/scratch/hs_err_pid7051.log
      #
      # Compiler replay data is saved as:
      # /oracle/valhallaL/open/JTwork/scratch/replay_pid7051.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #
      Current thread is 7062
      Dumping core ...

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: