8206109: [lworld] TestLWorld crashes in ciInstanceKlass::get_field_by_offset() with -Xcomp